irc/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webirc-route
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`webirc.razzie.xyz`)
    kind: Rule
    services:
    - name: ircd
      port: 8080
  tls:
    secretName: mirror-razzie-xyz-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: irc-tls-route
spec:
  entryPoints:
  - irc-tls
  routes:
  - match: HostSNI(`*`)
    services:
    - name: ircd
      port: 6667
      proxyProtocol:
        version: 2
  tls:
    secretName: mirror-razzie-xyz-cert
    passthrough: false
